--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- meta tags -->
+    <!-- TODO: -->
+    <meta name="title" property="og:title" content="natHACKS" />
+    <meta name="author" content="Zeyu Li" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="A natHACKS project"
     />
+    <meta name="keywords" content="natHACKS, unity" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <!-- TODO: preview image -->
+    <meta property="og:image" content="" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta property="twitter:title" content="natHACKS Page!" />
+    <meta property="twitter:description" content="A natHACKS project" />
+    <meta property="twitter:image" content="" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>natHACKS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
